tests/fails/opaque.t


terra foo()
	var a : &opaque = nil
	return a + 1
end
foo()